--- a/Ihrd/myapp/templates/myapp/home.html
+++ b/Ihrd/myapp/templates/myapp/home.html
@@ -1,6 +1,16 @@
 {% extends 'myapp/header.html' %}
 <!--Block content goes below-->
   {% block content %}
-  <h1>Hello, world!</h1>
-    
+  <section>
+
+    <div class="form-box">
+      <div class="form-value">
+        <h2>Hello World!</h2>
+        <button class="button-1" type="submit">Log in</button>
+      <button type="submit">Register</button>
+  </div>
+      </div>
+      
+  
+  </section>
   {% endblock %}
