--- a/Ihrd/myapp/templates/myapp/register.html
+++ b/Ihrd/myapp/templates/myapp/register.html
@@ -1,18 +1,45 @@
-{% extends "myapp/header.html" %}
+{% extends "myapp/header.html" %} 
+{% block content %}
 
-{% block content %} 
-
-       
-
-<!--Register--> 
-<div class="container py-5">
-	<h1>Register</h1>
-	<form method="POST">
-		{% csrf_token %}
-		{{ register_form.as_p }}         
-		<button  type="submit">Register</button>
-	</form>
-	<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
-</div>
+<section>
+  <div class="form-box">
+    <div class="form-value">
+      <h2>Register</h2>
+      <form method="POST">
+        {% csrf_token %}
+        <div class="inputbox">
+          {{ register_form.first_name }}
+          <label for="{{ register_form.first_name.id_for_label }}">First Name</label>
+        </div>
+        <div class="inputbox">
+          {{ register_form.last_name }}
+          <label for="{{ register_form.last_name.id_for_label }}">Last Name</label>
+        </div>
+        <div class="inputbox">
+          {{ register_form.username }}
+          <label for="{{ register_form.username.id_for_label }}">Username</label>
+        </div>
+        <div class="inputbox">
+          {{ register_form.email }}
+          <label for="{{ register_form.email.id_for_label }}">Email</label>
+        </div>
+        <div class="inputbox">
+          {{ register_form.password1 }}
+          <label for="{{ register_form.password1.id_for_label }}">Password</label>
+        </div>
+        <div class="inputbox">
+          {{ register_form.password2 }}
+          <label for="{{ register_form.password2.id_for_label }}">Confirm Password</label>
+        </div>
+        
+        <button type="submit">Register</button>
+      </form>
+      <p class="text-center">
+        If you already have an account, <a href="/login">login</a> instead.
+      </p>
+    </div>
+  </div>
+</section>
 
 {% endblock %}
+
